GNOME Bugzilla – Bug 747602
basetextoverlay: Leak in gst_base_text_overlay_text_chain
Last modified: 2015-04-10 09:14:28 UTC
.
Created attachment 301256 [details] [review] basetextoverlay: fix buffer leak in chain function If we don't consume the buffer by passing its reference to overlay->text_buffer then we need to unref it. Fix a leak with validate.file.playback.fast_forward.test5_mkv when running inside Valgrind. https://bugzilla.gnome.org/show_bug.cgi?id=747602 Signed-off-by: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk>
Pushed, thanks: commit e9a6cafa13eafdcd81abb767cf3e959c0ae918f4 Author: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk> Date: Thu Apr 9 17:03:11 2015 +0200 basetextoverlay: fix buffer leak in chain function If we don't consume the buffer by passing its reference to overlay->text_buffer then we need to unref it. Fix a leak with validate.file.playback.fast_forward.test5_mkv when running inside Valgrind. https://bugzilla.gnome.org/show_bug.cgi?id=747602